Fix mobile video width on mobile

--- a/src/templates/styles/post.module.sass
+++ b/src/templates/styles/post.module.sass
@@ -27,9 +27,9 @@
     margin: base-height(0.5) 0
     max-width: $layout-content-width
     @media (max-width: 672px)
-      max-width: calc(100% - #{base-width(2)})
+      max-width: calc(100vw - #{base-width(4)})
     @media (max-width: 500px)
-      max-width: calc(100% - #{base-width(0.8)})
+      max-width: calc(100vw - #{base-width(1.6)})
 
   h3
     margin-top: base-height(1)
